Swagger Upgrades-2
